--- a/templates/email/author-weekly-report.html.twig
+++ b/templates/email/author-weekly-report.html.twig
@@ -12,6 +12,11 @@
     </row>
     <row>
         <columns>
+            {{ include('email/_report-table.html.twig') }}
+        </columns>
+    </row>
+    <row>
+        <columns>
             <center>
                 <spacer size="20"></spacer>
                 <button href="{{ url('app_homepage') }}">Check on the Space Bar</button>
